crates/strider/tests/snapshots/v2__ppc64le__builtins__expect_branch.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v7" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v7" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "15" -> "11" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ Val", shape=house, fillcolor="#163030"];
  "10" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "19" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "23" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="φ Mem", shape=house, fillcolor="#163030"];
  "10" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "25" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "29" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "27" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "33" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "36" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "38" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "38" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "42" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "46" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "49" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="φ r3", shape=house, fillcolor="#163030"];
  "5" -> "50" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "52" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "53" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "55" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "55" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "57" -> "55" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "47" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "59" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "61" -> "59" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "63" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "63" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "66" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "68" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "40" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "71" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "73" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "75" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "75" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x64:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "76" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "23" -> "76" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "71" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "78" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "80" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "82" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "82" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "83" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0x64:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "76" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "84" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "84" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "86" -> "84" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "86" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "76" -> "86" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "87" -> "86" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "87" [label="const 0x64:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
